[tool.poetry]
name = "tdd_learning_python"
version = "0.1.0"
description = ""
authors = ["Isaias Souza <isaias.souza.spfc@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
urllib3 = "^1.26.9"
Flask = "^2.1.2"
selenium = "^4.1.5"

[tool.poetry.dev-dependencies]
ward = "^0.66.0-beta.0"
splinter = {version = "^0.17.0", extras = ["flask"]}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
